--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -237,7 +237,7 @@ html, body {
 	z-index: 100;
 }
 .rows{
-    width: 1200px;
+    width: 1000px;
     margin: 0 auto;
     height: 500px
 }
@@ -280,4 +280,68 @@ html, body {
     background: -o-linear-gradient(right, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09))); /* Opera 11.1 - 12.0 */
     background: -moz-linear-gradient(right, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09))); /* Firefox 3.6 - 15 */
     background: linear-gradient(to right, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09)); /* 标准的语法（必须放在最后） */
+}
+.project-title{
+    text-align: center;
+    color: white;
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    transform: translateX(-50%)
+}
+.skill-box{
+    display: flex;
+    flex-flow: row;
+}
+.skill-box .flex-box{
+    flex: 1;
+    outline: 1px solid red;
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    /*舞台（动画元素的父容器）perspective*/
+    -webkit-perspective: 800px;
+    -moz-perspective: 800px;
+}
+.flex-box div{
+    position: absolute;
+    left: 0;
+    height: 0;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    /*动画元素transform-style*/
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -webkit-transition: .8s ease-in-out ;
+    -moz-transition:  .8s ease-in-out ;
+    /*动画元素背后设置为hidden*/
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+}
+.flex-box div:first-child{
+    /*
+    绕y轴旋转
+    */
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    z-index: 2;
+}
+
+.flex-box div:last-child{
+    background: url("images/bg.jpg") no-repeat 0 0;
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    z-index: 1;
+}
+
+.flex-box div:first-child{
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+}
+
+.flex-box div:last-child{
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
 }
