--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -276,9 +276,9 @@ html, body {
 }
 .status-active{
     border-radius: 3px;
-    background: -webkit-linear-gradient(left, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09))); /* Safari 5.1 - 6.0 */
-    background: -o-linear-gradient(right, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09))); /* Opera 11.1 - 12.0 */
-    background: -moz-linear-gradient(right, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09))); /* Firefox 3.6 - 15 */
+    background: -webkit-linear-gradient(left, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09)); /* Safari 5.1 - 6.0 */
+    background: -o-linear-gradient(right, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09)); /* Opera 11.1 - 12.0 */
+    background: -moz-linear-gradient(right, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09)); /* Firefox 3.6 - 15 */
     background: linear-gradient(to right, rgba(206, 165, 165, 0.62) , rgba(220, 140, 140, 0.09)); /* 标准的语法（必须放在最后） */
 }
 .project-title{
@@ -295,53 +295,27 @@ html, body {
 }
 .skill-box .flex-box{
     flex: 1;
-    outline: 1px solid red;
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 100%;
-    /*舞台（动画元素的父容器）perspective*/
-    -webkit-perspective: 800px;
-    -moz-perspective: 800px;
+    padding: 20px;
 }
-.flex-box div{
-    position: absolute;
-    left: 0;
-    height: 0;
-    width: 100%;
-    height: 100%;
-    color: #fff;
-    /*动画元素transform-style*/
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -webkit-transition: .8s ease-in-out ;
-    -moz-transition:  .8s ease-in-out ;
-    /*动画元素背后设置为hidden*/
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
+.second-title{
+    color: white;
+    margin: 0
 }
-.flex-box div:first-child{
-    /*
-    绕y轴旋转
-    */
-    -webkit-transform: rotateY(0);
-    -moz-transform: rotateY(0);
-    z-index: 2;
+.dec-box{
+    padding-left: 20px; 
+    font-size: 14px;
+    color: white;   
 }
-
-.flex-box div:last-child{
-    background: url("images/bg.jpg") no-repeat 0 0;
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    z-index: 1;
+.sw-project{
+    padding: 15px;
 }
-
-.flex-box div:first-child{
-    -webkit-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-180deg);
+.pro-box{
+    margin: 0 0 20px;
+    font-size: 16px;
 }
-
-.flex-box div:last-child{
-    -webkit-transform: rotateY(0);
-    -moz-transform: rotateY(0);
+.pro-box small{
+    font-size: 12px
+}
+.dec-box{
+    text-indent: 2em;
 }
