--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -22,6 +22,7 @@ body {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	background-size:100% 100% 
 }
 
 .slide {
@@ -90,10 +91,10 @@ body {
 }
 
 .easing {
-	-webkit-transition: all 0.7s ease-out;
-	-moz-transition: all 0.7s ease-out;
-	-o-transition: all 0.7s ease-out;
-	transition: all 0.7s ease-out;
+	-webkit-transition: all 700ms ease;
+	-moz-transition: all 700ms ease;
+	-o-transition: all 700ms ease;
+	transition: all 700ms ease;
 }
 
 #fullPage-nav {
@@ -234,9 +235,9 @@ body {
 
 .avator {
 	border-radius: 50%;
-	margin: 10px 0 20px
+	margin: 10px 0 20px;
+	transition: all 1s;
 }
-
 
 /*翻书效果*/
 
